fixed truncation of legacy formatting by borrowing code from ShellTesting

--- a/Resources/Mandoc.css
+++ b/Resources/Mandoc.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  color: blue; margin-left: 3em; font: serif; --tag-width: 3em;
+  color: darkblue; margin-left: 3em; font: serif; --tag-width: 3em;
 }
 
 br { display: block; margin-top: 0.3em; margin-bottom: 0.3em;}
